# mcp-weather-analysis-reports

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
legacy/: main.py
legacy/tests/: __init__.py  test_analyze.py
legacy/utils/: __init__.py  analyze.py  export_excel.py  fetch_weather.py  notify_discord.py  plot_graph.py  send_email.py  upload_drive.py
